--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -10,12 +10,10 @@
   "home.chatActionSheet.discord": "BrightID Discord",
   "home.accessibilityLabel.connect": "connect",
 
-
   "onboarding.text.intro": "<text>BrightID uses the people you know</text><text>to enforce one-account-per-person</text><text>for important applications like</text><text>voting and universal basic income.</text>",
   "onboarding.label.maintainPrivacy": "Maintain Privacy",
   "onboarding.text.privacy": "<text>Prove you're a unique person</text><text>while preserving your privacy.</text>",
   "onboarding.button.getStarted": "Get Started",
-
 
   "signup.header.title": "SignUp",
   "signup.button.addPhoto": "Add Photo",
@@ -29,10 +27,32 @@
   "signup.alert.nameTooShort": "Your name must be at least 2 characters",
   "signup.alert.photoMissing": "A photo is required. Please press enter on the keyboard.",
 
-
   "recovery.header.title": "Recovery Code",
   "recovery.text.askTrustedConnections": "Ask your trusted connections to scan this code.",
 
+  "eula.header.title": "License Agreement",
+  "eula.header.eula": "End-User License Agreement (EULA)",
+  "eula.text.eula": "This End-User License Agreement (\"EULA\") is a legal agreement between you and BrightID Main LLC. Our EULA was created by EULA Template for BrightID.\n\nThis EULA agreement governs your acquisition and use of our BrightID software (\"Software\") directly from BrightID Main LLC or indirectly through a BrightID Main LLC authorized reseller or distributor (a \"Reseller\").\n\nPlease read this EULA agreement carefully before completing the installation process and using the BrightID software. It provides a license to use the BrightID software and contains warranty information and liability disclaimers.\n\nIf you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.\n\nThis EULA agreement shall apply only to the Software supplied by BrightID Main LLC herewith regardless of whether other software is referred to or described herein. The terms also apply to any BrightID Main LLC updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply.\n",
+  "eula.header.privacyPolicy": "Privacy Policy",
+  "eula.text.privacyPolicy": "BrightID built the BrightID app as an Open Source app. This SERVICE is provided by BrightID at no cost and is intended for use as is.\n\nThis page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.\n\nIf you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.\n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at BrightID unless otherwise defined in this Privacy Policy.\n",
+  "eula.subheader.collection": "Information Collection and Use",
+  "eula.text.collection": "For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to Photo, Name.\n\nThe information that we request will be retained by us and used as described in this privacy policy.\n\nThe name and photo you enter in BrightID are only shared with people in your personal connections list. Your name and photo are not stored or used by BrightID outside of your device.\n",
+  "eula.description.collection.link": "Link to privacy policy of third party service providers used by the app",
+  "eula.text.collection.link": "Google Play Services",
+  "eula.subheader.log": "Log Data",
+  "eula.text.log": "We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.\n",
+  "eula.subheader.cookies": "Cookies",
+  "eula.text.cookies": "Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device’s internal memory.\n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.\n",
+  "eula.subheader.security": "Security",
+  "eula.text.security": "We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.\n",
+  "eula.subheader.links": "Links to Other Sites",
+  "eula.text.links": "This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n",
+  "eula.subheader.children": "Children's Privacy",
+  "eula.text.children": "These services do not address anyone under the age of 13.\n\nAn account operated by a legal guardian on behalf of a child is the responsibility of the legal guardian.\n\nWe do not store personal information on servers. The name and photo you enter in BrightID are only shared with people in your personal connections list. Your name and photo are not stored or used by BrightID outside of your device.\n",
+  "eula.subheader.changes": "Changes to This Privacy Policy",
+  "eula.text.changes": "We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.\n",
+  "eula.header.terms": "Terms of Use",
+  "eula.text.terms": "ISC License\n\nCopyright (c) BrightID Contributors\n\nPermission to use, copy, modify, and/or distribute this software for any purpose with or without fee is hereby granted, provided that the above copyright notice and this permission notice appear in all copies.\n\nTHE SOFTWARE IS PROVIDED \"AS IS\" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.\n\n",
 
   "qrcode.header.connections": "{{count}} / 30 Connections",
   "qrcode.text.scanCode": "<text>Hey {{name}}, scan a code and</text><text>make a new connection today</text>",
@@ -59,7 +79,6 @@
   "qrcode.text.pendingConnections": "You have {{count}} pending connection",
   "qrcode.text.pendingConnections_plural": "You have {{count}} pending connections",
   "qrcode.text.confirmConnections": "Confirm Connections",
-
 
   "pendingConnections.text.errorGeneric": "Error while connecting. Please try to reconnect.",
   "pendingConnections.text.errorMyself": "OOPS!!! This is you...",
@@ -88,7 +107,6 @@
   "pendingConnection.alert.text.errorCreateChannel": "Could not create connection channel. Error message: {{message}}",
   "pendingConnection.alert.text.errorJoinChannel": "Could not join connection channel. Error message: {{message}}",
 
-
   "connections.header.connections": "Connections",
   "connections.text.noConnections": "No connections",
   "connections.removeActionSheet.title": "Remove connection",
@@ -112,7 +130,6 @@
   "connections.accessibilityLabel.connectionPhoto": "Connection Photo",
   "connections.accessibilityLabel.viewConnectionDetails": "View Connection details",
 
-
   "connectionDetails.header.connectionDetails": "Connection Details",
   "connectionDetails.tags.loading": "Loading...",
   "connectionDetails.tags.connectedAt": "Connected {{date}}",
@@ -134,13 +151,11 @@
   "connectionDetails.button.reportSubmit": "Submit",
   "connectionDetails.button.reportCancel": "Cancel",
 
-
   "connectionsSearch.header.sorting": "Sorting",
   "connectionsSearch.button.save": "Save",
   "connectionsSearch.text.chooseSortMethod": "Choose one of the methods below",
   "connectionsSearch.button.sortByDate": "Sort by date added",
   "connectionsSearch.button.sortByName": "Sort by name",
-
 
   "groups.header.groups": "Groups",
   "groups.header.newGroup": "New Group",
@@ -164,7 +179,7 @@
   "groups.memberActionSheet.dismissMember": "Dismiss from group",
   "groups.memberActionSheet.cancel": "Cancel",
   "groups.alert.title.inviteSuccess": "Successful Invitation",
-  "groups.alert.text.inviteSuccess":"You invited {{name}} successfully to the group",
+  "groups.alert.text.inviteSuccess": "You invited {{name}} successfully to the group",
   "groups.alert.title.leaveGroup": "Leave Group",
   "groups.alert.text.leaveGroup": "Are you sure you want to leave this group?",
   "groups.alert.title.errorLeaveGroup": "Error leaving group",
@@ -177,8 +192,7 @@
   "groups.accessibilityLabel.groupsLogo": "groups logo",
   "groups.state.creatingGroup": "creating the group",
   "groups.state.uploadingGroupPhoto": "uploading group photo",
-  
-  
+
   "createGroup.placeholder.groupName": "What is the group name?",
   "createGroup.button.next": "Next",
   "createGroup.label.cofounders": "CO-FOUNDERS",
@@ -189,7 +203,6 @@
   "createGroup.alert.text.nameMissing": "Please add a name for group",
   "createGroup.alert.text.nameTooShort": "The group name must be at least 2 characters",
   "createGroup.alert.title.createFailed": "Group creation unsuccessful",
-  
 
   "apps.text.noApps": "No Apps",
   "apps.text.pendingLink": "Linking your account in {{context}}\n to your BrightID ...",
@@ -210,7 +223,6 @@
   "apps.alert.title.linkFailure": "Failed",
   "apps.alert.text.linkFailure": "Failed to link your account in {{context}} to your BrightID\n{{result}}",
 
-
   "notifications.tab.connections": "connections",
   "notifications.tab.groups": "groups",
   "notifications.tab.miscellaneous": "miscellaneous",
@@ -228,13 +240,11 @@
   "notifications.alert.text.successAcceptGroupInvite": "You joined {{groupName}}",
   "notifications.alert.text.failureAcceptGroupInvite": "Failed to join the group",
 
-
   "notificationBar.title.pendingConnection": "Confirm connections",
   "notificationBar.text.pendingConnections": "You have {{count}} pending connection",
   "notificationBar.text.pendingConnections_plural": "You have {{count}} pending connections",
   "notificationBar.title.socialRecovery": "Backup & Social Recovery",
   "notificationBar.text.socialRecovery": "Please select your Trusted Connections to enable social recovery of your BrightID",
-
 
   "backup.header.backup": "Backup",
   "backup.header.trustedConnections": "Trusted Connections",
@@ -249,7 +259,6 @@
   "backup.alert.text.passwordTooShort": "Your password must be at least 8 characters long.",
   "backup.alert.text.needThreeTrusted": "You need at least three trusted connections for backup.",
 
-
   "restore.header.accountRecovery": "Account Recovery",
   "restore.button.startRestore": "Start Restore",
   "restore.text.downloadingData": "Downloading data from backup server ...",
@@ -262,7 +271,6 @@
   "restore.text.noConnections": "No connections...",
   "restore.alert.text.requestRecovering": "Your request to help recovering this account submitted successfully!",
 
-
   "drawer.label.home": "Home",
   "drawer.label.editProfile": "Edit Profile",
   "drawer.label.achievements": "Achievements",
@@ -272,12 +280,10 @@
   "drawer.alert.title.upToDate": "Check for Update",
   "drawer.alert.text.upToDate": "BrightID is up to date.",
 
-
   "graphExplorer.text.backupRequired": "Setting up backup and recovery is required to access your graph explorer code. Check your notifications or connect to more users to be eligible for backup and recovery.",
   "graphExplorer.text.explorerWebsiteDescription": "is a website designed to explore the entire BrightID social graph. Use the code above to see your connections in the graph.",
   "graphExplorer.button.copyCode": "Copy Code",
   "graphExplorer.alert.text.copied": "Copied to clipboard!",
-
 
   "contact.title.contactUs": "Contact Us",
   "contact.label.email": "Email",
@@ -287,7 +293,6 @@
   "contact.label.socialMedia": "Social Media",
   "contact.text.weAre": "We are ",
   "contact.text.openSource": "open source!",
-
 
   "profile.label.name": "Name",
   "profile.label.socialMediaLink": "Social Media Link",
@@ -309,7 +314,6 @@
   "profile.alert.title.passwordMatch": "Please try again",
   "profile.alert.text.passwordMatch": "Current password does not match.",
 
-
   "achievements.progress.title": "Completion:",
   "achievements.notification.title": "Achievement unlocked!",
   "achievements.notification.message": "You completed the task \"{{title}}\".",
@@ -329,7 +333,6 @@
   "achievements.get_sponsored.description": "Get sponsored by linking with an app that offers sponsorship",
   "achievements.setup_trusted_connections.title": "Setup social recovery",
   "achievements.setup_trusted_connections.description": "Setup your trusted connections to enable social account recovery",
-
 
   "common.alert.error": "Error",
   "common.alert.success": "Success",
