--- a/BrightID/translations/french.json
+++ b/BrightID/translations/french.json
@@ -10,12 +10,10 @@
   "home.chatActionSheet.discord": "Discord BrightID",
   "home.accessibilityLabel.connect": "se connecter",
 
-
   "onboarding.text.intro": "<text>BrightID utilise les personnes</text><text> que vous connaissez</text><text>pour assurer qu'il n'existe</text><text>qu'un seul compte par personne pour les usages important</text><text>tels que le vote et le revenu de base.</text>",
   "onboarding.label.maintainPrivacy": "Préservez votre vie privée",
   "onboarding.text.privacy": "<text>Prouvez que vous êtes vous</text><text>en préservant votre vie privée.</text>",
   "onboarding.button.getStarted": "Démarrer",
-
 
   "signup.header.title": "S'enregistrer",
   "signup.button.addPhoto": "Ajouter une photo",
@@ -29,10 +27,32 @@
   "signup.alert.nameTooShort": "Votre nom doit contenir au moins 2 caractères",
   "signup.alert.photoMissing": "Une photo est requise",
 
-
   "recovery.header.title": "Code de Restauration",
   "recovery.text.askTrustedConnections": "Demandez à vos contacts de confiance de scanner ce code.",
 
+  "eula.header.title": "Accord de Licence",
+  "eula.header.eula": "End-User License Agreement (EULA)",
+  "eula.eula.text": "This End-User License Agreement (\"EULA\") is a legal agreement between you and BrightID Main LLC. Our EULA was created by EULA Template for BrightID.\n\nThis EULA agreement governs your acquisition and use of our BrightID software (\"Software\") directly from BrightID Main LLC or indirectly through a BrightID Main LLC authorized reseller or distributor (a \"Reseller\").\n\nPlease read this EULA agreement carefully before completing the installation process and using the BrightID software. It provides a license to use the BrightID software and contains warranty information and liability disclaimers.\n\nIf you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.\n\nThis EULA agreement shall apply only to the Software supplied by BrightID Main LLC herewith regardless of whether other software is referred to or described herein. The terms also apply to any BrightID Main LLC updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply.",
+  "eula.header.privacyPolicy": "Privacy Policy",
+  "eula.text.privacyPolicy": "BrightID built the BrightID app as an Open Source app. This SERVICE is provided by BrightID at no cost and is intended for use as is.\n\nThis page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.\n\nIf you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.\n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at BrightID unless otherwise defined in this Privacy Policy.\n\n",
+  "eula.subheader.collection": "Information Collection and Use",
+  "eula.collection.text": "For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to Photo, Name.\n\nThe information that we request will be retained by us and used as described in this privacy policy.\n\nThe name and photo you enter in BrightID are only shared with people in your personal connections list. Your name and photo are not stored or used by BrightID outside of your device.\n\n",
+  "eula.collection.link.description": "Link to privacy policy of third party service providers used by the app",
+  "eula.collection.link.text": "Google Play Services",
+  "eula.subheader.log": "Log Data",
+  "eula.text.log": "We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.",
+  "eula.subheader.cookies": "Cookies",
+  "eula.cookies.text": "Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device’s internal memory.\n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.\n\n",
+  "eula.subheader.security": "Security",
+  "eula.security.text": "We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.",
+  "eula.subheader.links": "Links to Other Sites",
+  "eula.links.text": "This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.",
+  "eula.subheader.children": "Children's Privacy",
+  "eula.children.text": "These services do not address anyone under the age of 13.\n\nAn account operated by a legal guardian on behalf of a child is the responsibility of the legal guardian.\n\nWe do not store personal information on servers. The name and photo you enter in BrightID are only shared with people in your personal connections list. Your name and photo are not stored or used by BrightID outside of your device.\n\n",
+  "eula.subheader.changes": "Changes to This Privacy Policy",
+  "eula.changes.text": "We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.",
+  "eula.header.terms": "Terms of Use",
+  "eula.terms.text": "ISC License\n\nCopyright (c) BrightID Contributors\n\nPermission to use, copy, modify, and/or distribute this software for any purpose with or without fee is hereby granted, provided that the above copyright notice and this permission notice appear in all copies.\n\nTHE SOFTWARE IS PROVIDED \"AS IS\" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.\n\n",
 
   "qrcode.header.connections": "{{count}} / 30 Connexions",
   "qrcode.text.scanCode": "<text>Bonjour {{name}}, scannez un code et</text><text>créez une nouvelle connexion aujourd'hui</text>",
@@ -54,12 +74,11 @@
   "qrcode.alert.shareLinkGroup": "Partagez ce lien",
   "qrcode.alert.connectSingle": "Connectez vous avec {{name}} sur BrightID : {{link}}",
   "qrcode.alert.connectGroup": "Créez une connexion de groupe avec {{name}} sur BrightID : {{link}}",
-  
+
   "qrcode.text.downloadingConnectionData": "Téléchargement des données de connexion",
   "qrcode.text.pendingConnections": "Vous avez {{count}} connexion en attente...",
   "qrcode.text.pendingConnections_plural": "Vous avez {{count}} connexions en attente...",
   "qrcode.text.confirmConnections": "Confirmation des connexions",
-
 
   "pendingConnections.text.errorGeneric": "Une erreur est survenue, veuillez essayer à nouveau de vous connecter avec {{name}}...",
   "pendingConnections.text.errorMyself": "OUPS!!! On dirait que c'est vous...",
@@ -88,7 +107,6 @@
   "pendingConnection.alert.text.errorCreateChannel": "Impossible de créer un canal de connexion. Message d'erreur : {{message}}",
   "pendingConnection.alert.text.errorJoinChannel": "Impossible de rejoindre un canal de connexion. Message d'erreur : {{message}}",
 
-
   "connections.header.connections": "Connexions",
   "connections.text.noConnections": "Aucune connexion",
   "connections.removeActionSheet.title": "Supprimer la connexion",
@@ -112,7 +130,6 @@
   "connections.accessibilityLabel.connectionPhoto": "Photo de la Connexion",
   "connections.accessibilityLabel.viewConnectionDetails": "Voir les détails de la Connexion",
 
-
   "connectionDetails.header.connectionDetails": "Détails de la Connexion",
   "connectionDetails.tags.loading": "Chargement...",
   "connectionDetails.tags.connectedAt": "Connecté(e) {{date}}",
@@ -134,13 +151,11 @@
   "connectionDetails.button.reportSubmit": "Signaler",
   "connectionDetails.button.reportCancel": "Annuler",
 
-
   "connectionsSearch.header.sorting": "Tri",
   "connectionsSearch.button.save": "Valider",
   "connectionsSearch.text.chooseSortMethod": "Choisissez une des méthodes ci-dessous",
   "connectionsSearch.button.sortByDate": "Trier par date ajoutée",
   "connectionsSearch.button.sortByName": "Trier par nom",
-
 
   "groups.header.groups": "Groupes",
   "groups.header.newGroup": "Nouveau Groupe",
@@ -164,7 +179,7 @@
   "groups.memberActionSheet.dismissMember": "Retirer du Groupe",
   "groups.memberActionSheet.cancel": "Annuler",
   "groups.alert.title.inviteSuccess": "Invitation Envoyée",
-  "groups.alert.text.inviteSuccess":"Vous avez invité {{name}} avec succès",
+  "groups.alert.text.inviteSuccess": "Vous avez invité {{name}} avec succès",
   "groups.alert.title.leaveGroup": "Quitter le Groupe",
   "groups.alert.text.leaveGroup": "Êtes-vous sûr de vouloir quitter ce groupe ?",
   "groups.alert.title.errorLeaveGroup": "Erreur en quittant le groupe",
@@ -177,8 +192,7 @@
   "groups.accessibilityLabel.groupsLogo": "logo pour les groupes",
   "groups.state.creatingGroup": "création du groupe",
   "groups.state.uploadingGroupPhoto": "envoi de la photo du groupe",
-  
-  
+
   "createGroup.placeholder.groupName": "Quel est le nom du groupe ?",
   "createGroup.button.next": "Suivant",
   "createGroup.label.cofounders": "COFONDATEURS",
@@ -189,7 +203,6 @@
   "createGroup.alert.text.nameMissing": "Veuillez entrer un nom pour le groupe",
   "createGroup.alert.text.nameTooShort": "Le nom du groupe doit contenir au moins 2 caractères",
   "createGroup.alert.title.createFailed": "Échec de la création du groupe",
-
 
   "apps.text.noApps": "Pas d'Application",
   "apps.text.pendingLink": "Compte BrightID en cours de liaison avec {{context}} ...",
@@ -210,7 +223,6 @@
   "apps.alert.title.linkFailure": "Échec",
   "apps.alert.text.linkFailure": "Impossible de lier votre compte BrightID avec {{context}}\n{{result}}",
 
-
   "notifications.tab.connections": "connexions",
   "notifications.tab.groups": "groupes",
   "notifications.tab.miscellaneous": "divers",
@@ -228,13 +240,11 @@
   "notifications.alert.text.successAcceptGroupInvite": "Vous avez rejoint {{groupName}}",
   "notifications.alert.text.failureAcceptGroupInvite": "Erreur lors de la tentative de rejoindre le groupe",
 
-  
   "notificationBar.title.pendingConnection": "Confirmez vos connexions",
   "notificationBar.text.pendingConnections": "Vous avez {{count}} connexion en attente",
   "notificationBar.text.pendingConnections_plural": "Vous avez {{count}} connexions en attente",
   "notificationBar.title.socialRecovery": "Sauvegarde & Restauration Sociale",
   "notificationBar.text.socialRecovery": "Veuillez sélectionner vos connexions de confiance afin d'activer la Restauration Sociale BrightID",
-
 
   "backup.header.backup": "Sauvegarde",
   "backup.header.trustedConnections": "Connexions de Confiance",
@@ -249,7 +259,6 @@
   "backup.alert.text.passwordTooShort": "Votre mot de passe doit comporter au moins 8 caractères.",
   "backup.alert.text.needThreeTrusted": "Vous devez définir au moins trois connexions de confiance pour effectuer une sauvegarde.",
 
-
   "restore.header.accountRecovery": "Restauration du Compte",
   "restore.button.startRestore": "Démarrer la Restauration",
   "restore.text.downloadingData": "Téléchargement des données depuis le serveur de sauvegarde ...",
@@ -262,7 +271,6 @@
   "restore.text.noConnections": "Aucune connexions...",
   "restore.alert.text.requestRecovering": "Votre requête pour aider à la restauration de ce compte a été soumise avec succès !",
 
-
   "drawer.label.home": "Accueil",
   "drawer.label.editProfile": "Éditer le Profil",
   "drawer.label.achievements": "Objectifs Remplis",
@@ -272,12 +280,10 @@
   "drawer.alert.title.upToDate": "Rechercher des Mises à Jour",
   "drawer.alert.text.upToDate": "BrightID est à jour.",
 
-
   "graphExplorer.text.backupRequired": "Configurer une Sauvegarde du Compte est requis pour accéder à votre Code Explorer. Vérifiez vos notifications ou connectez vous à davantage d'utilisateurs afin d'être éligible à la Sauvegarde du Compte.",
   "graphExplorer.text.explorerWebsiteDescription": "est un site web conçu pour explorer l'intégralité du Social Graph de BrightID. Utilisez le code ci-dessus pour voir vos connexions dans le Graph.",
   "graphExplorer.button.copyCode": "Copier le Code",
   "graphExplorer.alert.text.copied": "Code copié !",
-
 
   "contact.title.contactUs": "Nous Contacter",
   "contact.label.email": "Email",
@@ -287,7 +293,6 @@
   "contact.label.socialMedia": "Réseaux Sociaux",
   "contact.text.weAre": "Nous sommes ",
   "contact.text.openSource": "open source !",
-
 
   "profile.label.name": "Nom",
   "profile.label.socialMediaLink": "Liens Réseaux Sociaux",
@@ -309,7 +314,6 @@
   "profile.alert.title.passwordMatch": "Veuillez réessayer",
   "profile.alert.text.passwordMatch": "Le mot de passe actuel est incorrect.",
 
-
   "achievements.progress.title": "Avancement :",
   "achievements.notification.title": "Objectif rempli !",
   "achievements.notification.message": "Vous avez complété la tâche \"{{title}}\".",
@@ -329,7 +333,6 @@
   "achievements.get_sponsored.description": "Vous faire sponsoriser en liant votre compte BrightID à une application sponsor",
   "achievements.setup_trusted_connections.title": "Configurer la Restauration Sociale",
   "achievements.setup_trusted_connections.description": "Définir vos connexions de confiance pour activer la Restauration Sociale",
-
 
   "common.alert.error": "Erreur",
   "common.alert.success": "Succès",
