--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -32,6 +32,7 @@
 
   "recovery.header.title": "Recovery Code",
   "recovery.text.askTrustedConnections": "Ask your trusted connections to scan this code.",
+  "recovery.text.recoveredItems": "{{count}} connections/groups recovered",
 
 
   "qrcode.header.connections": "{{count}} / 30 Connections",
@@ -259,6 +260,7 @@
   "restore.alert.text.notTrusted": "One of your friends is not in your list of trusted connections",
   "restore.title.chooseConnection": "Choose Connection",
   "restore.text.chooseConnectionToHelp": "Please select the connection whose account you are helping to recover.",
+  "restore.text.sendingProgress": "Sending {{completedItems}}/{{totalItems}} completed",
   "restore.text.noConnections": "No connections...",
   "restore.alert.text.requestRecovering": "Your request to help recovering this account submitted successfully!",
 
